# tambourine-voice

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml  welcome.yml
app/: knip.json  package.json  pnpm-lock.yaml
app/src/: App.tsx  OverlayApp.tsx  app-main.css  main.tsx  styles.css
app/src-tauri/: Cargo.toml
app/src-tauri/src/: audio.rs  config_sync.rs  events.rs  history.rs  lib.rs  settings.rs  state.rs
app/src-tauri/src/active_app_context/: macos.rs  mod.rs  shared.rs  watcher.rs  windows.rs
app/src-tauri/src/audio_mute/: macos.rs  mod.rs  shared.rs  windows.rs
app/src-tauri/src/commands/: export_import.rs  history.rs  settings.rs  text.rs
app/src-tauri/src/tests/: active_app_context_macos_tests.rs  active_app_context_shared_tests.rs  active_app_context_windows_tests.rs  audio_mute_tests.rs  hotkey_config_tests.rs  settings_commands_tests.rs  watcher_tests.rs
app/src/components/: DeviceSelector.tsx  HistoryFeed.tsx  HotkeyInput.tsx
app/src/components/settings/: AudioSettings.tsx  ConnectionSettings.tsx  DataManagementSettings.tsx  HotkeySettings.tsx  PromptSectionEditor.tsx  PromptSettings.tsx  ProvidersSettings.tsx  StatusIndicator.tsx  index.ts
app/src/contexts/: ConnectionContext.tsx
app/src/hooks/: useConnectionManager.ts
app/src/lib/: activeAppContext.ts  connectionManager.ts  events.ts  hotkeyDefaults.ts  nativeAudio.ts  queries.ts  tauri.test.ts  tauri.ts
app/src/machines/: connectionMachine.test.ts  connectionMachine.ts
app/src/stores/: recordingStore.ts
docs/: architecture-diagram.md  focus-context-plan.md
server/: .env.example  Dockerfile  dictation_server.py  docker-compose.yml  main.py  pyproject.toml
server/api/: __init__.py  config_server.py
server/config/: settings.py
server/elasticbeanstalk/: Dockerrun.aws.json  README.md
server/elasticbeanstalk/.ebextensions/: 01-firewall.config
server/processors/: __init__.py  configuration.py  context_manager.py  llm_cleanup.py  llm_gate.py  transcription_buffer.py  turn_controller.py
server/protocol/: __init__.py  messages.py  providers.py
server/services/: provider_registry.py  providers.py
server/tests/: test_active_app_context_manager.py  test_active_app_context_messages.py
server/utils/: logger.py  observers.py  rate_limiter.py
