[package]
name = "tambourine-voice"
version = "1.0.0"
description = "Customizable AI-powered voice dictation tool"
license = "AGPL-3.0"
authors = ["kstonekuan"]
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "tambourine_voice_lib"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.4", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2.5.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
log = "0.4.29"

# Keyboard automation
enigo = "0.6.1"
arboard = "3.6.1"

# Async runtime
tokio = { version = "1.48.0", features = ["rt", "sync"] }

# Settings and history
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
dirs = "6.0.0"

# Audio playback
rodio = { version = "0.21.1", default-features = false, features = [
    "mp3",
    "playback",
] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.3.1"

# Windows audio control (WASAPI)
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32",
    "Win32_Devices",
    "Win32_Devices_FunctionDiscovery",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Foundation",
    "Win32_Media",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
] }

# macOS audio control (CoreAudio)
[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-audio = "0.3.2"
