[package]
name = "tambourine-voice"
version = "0.1.0"
description = "Your personal voice interface for any app"
license = "AGPL-3.0"
authors = ["kstonekuan"]
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "tambourine_voice_lib"

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
# Tauri core and plugins
tauri = { version = "2.10.2", features = [
    "tray-icon",
    "macos-private-api",
    "image-png",
    "devtools",
] }
tauri-utils = "2.8.2"
tauri-plugin-opener = "2.5.3"
tauri-plugin-store = "2.4.2"
tauri-plugin-http = { version = "2.5.7", features = ["json"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.101"

# Logging
log = "0.4.29"
env_logger = "0.11.8"

# Keyboard automation
enigo = "0.6.1"
arboard = "3.6.1"

# Async runtime
tokio = { version = "1.49.0", features = ["rt", "sync"] }

# Settings and history
chrono = { version = "0.4.43", features = ["serde"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
tempfile = "3.24.0"

# Audio playback
rodio = { version = "0.21.1", default-features = false, features = [
    "mp3",
    "playback",
] }

# Native audio capture (cross-platform: CoreAudio on macOS, WASAPI on Windows)
cpal = "0.17.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.3.1"

# Windows audio control (WASAPI)
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32",
    "Win32_Devices",
    "Win32_Devices_FunctionDiscovery",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Foundation",
    "Win32_Media",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Threading",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
] }

# macOS audio control (CoreAudio) and NSPanel for overlay
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"
objc2-app-kit = "0.3.2"
objc2-foundation = "0.3.2"
objc2-core-audio = "0.3.2"
core-foundation = "0.10.1"
core-graphics = "0.25.0"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
needless_pass_by_value = "allow"
unnecessary_wraps = "allow"
missing_panics_doc = "allow"
